--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     </table>
     </div>
     </div>
-    <div class="sd" style="text-align: center;">&nbsp;</div>
+    <div class="sd" style="text-align: center;"></div>
 <style>
     body{
-        height: 210mm;
+        height: 209mm;
         width:297mm;
     }
     .pacey {
@@ -44,7 +44,7 @@
     flex-direction: column;
     justify-content: center;
     /* width: 100%; */
-    height: 100%;
+    height: 99%;
     align-items: center;
 /* width: 1122px; */
 /* height: 793px; */
@@ -78,6 +78,7 @@ tbody {
 
 .sd {
     page-break-before: always;
+    display: none;
 }
 .tohead, .sse{
     font-family: sans-serif;
